--- a/css/style.css
+++ b/css/style.css
@@ -95,12 +95,16 @@ a.button:hover {
 #title {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: flex-end;
 
     margin-bottom: 1rem;
 }
 
-#themeButton {
+#title > h1 {
+    justify-self: flex-start;
+}
+
+#themeButton, #homeButton {
     width: 40px;
     height: 40px;
 
