--- a/css/style.css
+++ b/css/style.css
@@ -115,3 +115,19 @@ a.button:hover {
 	align-items: center;
 	justify-content: center;
 }
+
+/*change color of text highlight*/
+::-moz-selection {
+	color: #f0f0f0;
+	background: #333;
+}
+::selection {
+	color: #f0f0f0;
+	background: #333;
+}
+
+.prevent-select {
+	-webkit-user-select: none; /* Safari */
+	-ms-user-select: none; /* IE 10 and IE 11 */
+	user-select: none; /* Standard syntax */
+}
