--- a/css/style.css
+++ b/css/style.css
@@ -118,12 +118,12 @@ a.button:hover {
 
 /*change color of text highlight*/
 ::-moz-selection {
-	color: #f0f0f0;
-	background: #333;
+	color: var(--bg-color);
+	background: var(--txt-color);
 }
 ::selection {
-	color: #f0f0f0;
-	background: #333;
+	color: var(--bg-color);
+	background: var(--txt-color);
 }
 
 .prevent-select {
